<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name = "myName"
            type="com.example.aboutme.MyName"
            />
    </data>
<LinearLayout
    android:id="@+id/nickname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@={myName.name}"
        android:textAlignment="center"
        android:textColor="#F44336" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sides_margin"
        android:layout_marginRight="@dimen/sides_margin"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/sides_margin"
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_marginRight="@dimen/sides_margin"
        android:fontFamily="sans-serif"
        android:text="@string/done"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@={myName.nickname}"/>

    <TextView
        android:id="@+id/title_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sides_margin"
        android:layout_marginRight="@dimen/sides_margin"
        android:text="@string/title"
        android:textColor="#F44336"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bio_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:paddingStart="@dimen/start_padding"
            android:paddingEnd="@dimen/start_padding"
            android:text="@string/bio" />
    </ScrollView>
</LinearLayout>
</layout>